# Skill-E

./: API_PROVIDER_SETUP.md  ARCHITECTURE.md  BACKLOG.md  BUILD.md  CONTRIBUTING.md  DEMO_SCRIPT.md  DEVLOG.md  EXECUTAR_BUILD.md  JUDGE_GUIDE.md  ONBOARDING.md  OVERVIEW.md  README.md  RELEASE_NOTES.md  S04_CONFORMITY_REPORT.md  S06_REFACTORING_PLAN.md  S06_REVIEW_SUMMARY.md  S07_REVIEW_REPORT.md  S09_EXECUTION_SUMMARY.md  START.bat  SUBMISSION.md  WHISPER_DEBUG.md  _legacy_tests  build-windows.ps1  fix-rust-permissions.bat  setup-and-build.ps1  start-dev.ps1
.github/workflows/: ci.yml  release.yml
.kiro/hooks/: README.md  auto-devlog-updater.json  complete-task-automation.json  comprehensive-devlog-guide.md  task-doc-automation.kiro.hook
.kiro/prompts/: create-tauri-project.md  devlog.md  implement-spec.md
.kiro/specs/S01-app-core/: design.md  requirements.md  tasks.md
.kiro/specs/S02-screen-capture/: design.md  requirements.md  tasks.md
.kiro/specs/S03-audio-recording/: design.md  requirements.md  tasks.md
.kiro/specs/S04-overlay-ui/: design.md  requirements.md  tasks.md
.kiro/specs/S05-processing/: design.md  requirements.md  tasks.md
.kiro/specs/S06-skill-export/: design.md  requirements.md  tasks.md
.kiro/specs/S07-variable-detection/: design.md  requirements.md  tasks.md
.kiro/steering/: PROJECT.md  product.md  structure.md  tech.md  testing.md  workflow.md
assets/docs/: skills_research_claude.md  skills_research_gpt.md  skills_research_kimi.md  skills_research_perplexity_anti-patterns.md  skills_research_perplexity_md-guide.md
sidecar/: README.md  main.py  requirements.txt  wispr-bridge.mjs
skill-e/: AUDIO_PERMISSION_ISSUE.md  AUDIO_TEST_QUICK_START.md  CRITICAL_FIXES_TEST.md  DESIGN_SYSTEM.md  DRAG_FIX.md  DRAG_FIX_EXPLANATION.md  DRAG_TEST_CHECKLIST.md  FINAL_FIXES.md  GLOBAL_HOTKEYS_TEST.md  MANUAL_TESTING_REPORT.md  README.md  RUNTIME_FIXES.md  S09_CONTEXT_SEARCH_COMPLETION.md  SYSTEM_TRAY_TEST.md  TASK_2_TEST_INSTRUCTIONS.md  TASK_3_WINDOW_TRACKING_TEST.md  TASK_4_CURSOR_POSITION_TEST.md  TASK_5_COMMAND_REGISTRATION_TEST.md  TASK_7_CAPTURE_HOOK_TEST.md  TASK_8_SESSION_STORAGE_TEST.md  TASK_9_CAPTURE_INTEGRATION_TEST.md  TASK_9_TEST_READY.md  TASK_S03-1_AUDIO_RECORDING_TEST.md  TASK_S03-3_AUDIO_FILE_HANDLING_TEST.md  TASK_S03-4_WHISPER_CLIENT.md  TASK_S03-5_SETTINGS_INTEGRATION_TEST.md  TASK_S03-6_AUDIO_TESTING.md  TASK_S04-10_FADE_PIN_MODE_TEST.md  TASK_S04-10_IMPLEMENTATION_SUMMARY.md  TASK_S04-11_KEYBOARD_TRACKER_TEST.md  TASK_S04-12_KEYBOARD_DISPLAY_TEST.md  TASK_S04-13_PASSWORD_REDACTION_TEST.md  TASK_S04-14_COMPLETION_SUMMARY.md  TASK_S04-14_ELEMENT_SELECTOR_TEST.md  TASK_S04-15_COMPLETION_SUMMARY.md  TASK_S04-15_ELEMENT_HIGHLIGHTING_TEST.md  TASK_S04-16_ELEMENT_SELECTION_TEST.md  TASK_S04-17_OVERLAY_STORE_TEST.md  TASK_S04-18_HOTKEY_INTEGRATION_TEST.md  TASK_S04-19_PERFORMANCE_OPTIMIZATION.md  (+65 more)
skill-e/.husky/: pre-commit
skill-e/_legacy_tests/: AudioRecordingTest.tsx  AutoFadeTest.tsx  CaptureIntegrationTest.tsx  DesignSystemTest.tsx  ElementHighlightingTest.tsx  ElementSelectorTest.tsx  ExportDialogTest.tsx  HotkeyIntegrationTest.tsx  KeyboardTrackerTest.tsx  OpenRouterTest.tsx  PasswordRedactionTest.tsx  PerformanceMonitorTest.tsx  SessionStorageTest.tsx  SettingsTest.tsx  SkillExportTest.tsx  SkillPreviewTest.tsx  StepBubbleTest.tsx  StepTrackingTest.tsx  VariableConfirmationTest.tsx
skill-e/electron/: main.mjs  preload.mjs  providers.mjs  smoke.mjs
skill-e/scripts/: README.md  build-all.ps1  build-all.sh
skill-e/src/: App.tsx  index.css  main.tsx
skill-e/src-tauri/: Cargo.toml  tauri.conf.json
skill-e/src-tauri/capabilities/: default.json
skill-e/src-tauri/icons/: icon.icns
skill-e/src-tauri/src/: input_listener.rs  lib.rs  main.rs
skill-e/src-tauri/src/commands/: capture.rs  codex.rs  export.rs  mod.rs  overlay.rs  playback.rs  whisper.rs  wispr.rs
(+267 files in other folders)
