[package]
name = "skill-e"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skill_e_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-screenshots = "2"
tray-icon = "0.14"
image = { version = "0.25", features = ["webp"] }
screenshots = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5"  # For reading WAV audio files
dirs = "5.0"   # For finding local app data directory

# Local Whisper transcription - optional, compile without if whisper.cpp fails
# Enable cuda feature for GPU: whisper-rs = { version = "0.15", features = ["cuda"] }
whisper-rs = { version = "0.15", optional = true }
tauri-plugin-dialog = "2.6.0"

[features]
default = []
local-whisper = ["whisper-rs"]
cuda = ["whisper-rs", "whisper-rs/cuda"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }
