[package]
name = "skill-e"
version = "0.1.0"
description = "Create Agent Skills by demonstration - Record your screen and voice to generate Agent Skills"
authors = ["Skill-E Team <contact@skille.app>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/veefoscax/Skill-E"
homepage = "https://github.com/veefoscax/Skill-E"
keywords = ["agent", "skills", "automation", "recording", "ai"]
categories = ["developer-tools", "productivity"]
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skill_e_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-screenshots = "2"
tray-icon = "0.14"
image = { version = "0.25", features = ["webp"] }
screenshots = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5"  # For reading WAV audio files
dirs = "5.0"   # For finding local app data directory
chrono = "0.4"  # For timestamps
reqwest = { version = "0.12", features = ["stream"] } # For downloading models
tokio = { version = "1", features = ["fs", "sync"] } # Async file operations
futures-util = "0.3" # Stream utilities

# Local Whisper transcription - optional, compile without if whisper.cpp fails
# Enable cuda feature for GPU: whisper-rs = { version = "0.15", features = ["cuda"] }
whisper-rs = { version = "0.15", optional = true }
tauri-plugin-dialog = "2.6.0"
rdev = "0.5" # Global input hook for S09 Step Recording
tauri-plugin-http = "2.0.0-beta.0"
tauri-plugin-fs = "2.0.0-beta.0"

[features]
default = ["local-whisper"]
local-whisper = ["whisper-rs"]
cuda = ["whisper-rs", "whisper-rs/cuda"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }
